--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-buildkonfigGradlePlugin = "0.17.1"
+buildkonfig = "0.17.1"
 compose-multiplatform = "1.7.3"
 glance = "1.1.1"
 junit = "4.13.2"
@@ -26,6 +26,8 @@ compose-navigation-ver = "2.8.0-alpha11"
 precompose-viewmodel-tlaster = "1.5.10"
 kotlinx-coroutines = "1.10.1"
 workRuntimeKtx = "2.10.0"
+detekt = "1.23.5"
+androidDetektCompose = "0.0.26"
 
 [libraries]
 androidx-glance = { module = "androidx.glance:glance", version.ref = "glance" }
@@ -33,7 +35,7 @@ androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", versi
 androidx-glance-appwidget-preview = { module = "androidx.glance:glance-appwidget-preview", version.ref = "glance" }
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glance" }
 androidx-glance-preview = { module = "androidx.glance:glance-preview", version.ref = "glance" }
-buildkonfig-gradle-plugin = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "buildkonfigGradlePlugin" }
+buildkonfig-gradle-plugin = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "buildkonfig" }
 jetbrains-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlinGradlePluginVersion" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
@@ -67,6 +69,10 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-com
 koin-composeVM = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
+detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
+android-detekt-compose = { group = "com.twitter.compose.rules", name = "detekt", version.ref = "androidDetektCompose" }
+detekt-gradlePlugin = { group = "io.gitlab.arturbosch.detekt", name = "detekt-gradle-plugin", version.ref = "detekt" }
+
 [bundles]
 ktor = ["ktor-core", "ktor-logging", "ktor-serialization", "ktor-negotiation"]
 
@@ -77,3 +83,7 @@ composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-mu
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+codingfeline-buildkonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildkonfig" }
+
+# Plugins defined by this project
+neopool-detekt = { id = "org.neopool.detekt", version.ref = "detekt" }
